--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "async-lock": "^1.4.1",
     "axios": "^1.7.9",
     "jest": "^29.7.0",
+    "json-colorizer": "^3.0.1",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "5.7.2"
