--- a/package.json
+++ b/package.json
@@ -7,25 +7,26 @@
     "lint": "eslint",
     "gen": "openapi-generator-cli generate"
   },
-  "dependencies": {
+  "packageManager": "yarn@4.6.0",
+  "devDependencies": {
+    "@eslint/js": "^9.19.0",
     "@jest/globals": "^29.7.0",
-    "@openapitools/openapi-generator-cli": "^2.15.3",
-    "@swc/core": "1.10.1",
-    "@types/node": "^20.17.10",
+    "@openapitools/openapi-generator-cli": "^2.16.3",
+    "@types/async-lock": "^1.4.2",
+    "@types/confusing-browser-globals": "^1",
+    "@types/node": "^22.13.1",
     "async-lock": "^1.4.1",
     "axios": "^1.7.9",
+    "eslint": "^9.19.0",
+    "globals": "^15.14.0",
     "jest": "^29.7.0",
     "json-colorizer": "^3.0.1",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "5.7.2"
+    "typescript": "5.7.3",
+    "typescript-eslint": "^8.23.0"
   },
-  "packageManager": "yarn@4.5.0",
-  "devDependencies": {
-    "@eslint/js": "^9.17.0",
-    "@types/async-lock": "^1.4.2",
-    "eslint": "^9.17.0",
-    "globals": "^15.14.0",
-    "typescript-eslint": "^8.18.1"
+  "dependencies": {
+    "confusing-browser-globals": "^1.0.11"
   }
 }
