--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "packageManager": "yarn@4.6.0",
   "devDependencies": {
+    "@3cx/eslint-config-airbnb": "^1.0.0",
     "@eslint/js": "^9.19.0",
     "@jest/globals": "^29.7.0",
     "@openapitools/openapi-generator-cli": "^2.16.3",
@@ -25,8 +26,5 @@
     "ts-node": "^10.9.2",
     "typescript": "5.7.3",
     "typescript-eslint": "^8.23.0"
-  },
-  "dependencies": {
-    "confusing-browser-globals": "^1.0.11"
   }
 }
