--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "ts-node": "^10.9.2",
     "typescript": "5.7.3",
     "typescript-eslint": "^8.23.0"
+  },
+  "dependencies": {
+    "generate-password": "^1.7.1"
   }
 }
